[gd_scene load_steps=7 format=3 uid="uid://qrmx2m7e7iv2"]

[ext_resource type="Script" path="res://Screens/gameover_screen.gd" id="1_cj0mi"]
[ext_resource type="Shader" path="res://Screens/blur.gdshader" id="2_obmxj"]
[ext_resource type="FontFile" uid="uid://diyi528k2kk5v" path="res://Assets/Fonts/rounded-mplus-1p-bold.ttf" id="3_1nlwx"]
[ext_resource type="FontFile" uid="uid://bdutbheg1vt4j" path="res://Assets/Fonts/rounded-mplus-1p-heavy.ttf" id="3_6oyk5"]
[ext_resource type="Theme" uid="uid://mf3u48yta16g" path="res://Screens/gameover_screen.tres" id="5_83d63"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v2egb"]
shader = ExtResource("2_obmxj")
shader_parameter/lod = 0.0

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cj0mi")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_v2egb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 144.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6oyk5")
theme_override_font_sizes/font_size = 100
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1nlwx")
theme_override_font_sizes/font_size = 60
text = "SCORE"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1nlwx")
theme_override_font_sizes/font_size = 60
text = "0000"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="RetryButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("5_83d63")
text = "リトライ"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_83d63")
text = "終了"
